Forgot to rename legacy as separated in one last place

--- a/html/index.html
+++ b/html/index.html
@@ -508,7 +508,7 @@ $('document').ready(function() {
                     <div>
                       <label>
                           <input type="radio" autocomplete="off" name="midi-mode" value="separated" id="midi-mode-separated">
-                              Legacy mode
+                              Separated mode
                           </input>
                       </label>
                     </div>
