--- a/html/settings.html
+++ b/html/settings.html
@@ -164,13 +164,14 @@ function refresh_sysprefs() {
                 $("#prefs-bluetooth-name").prop("disabled", true)
             }
 
-            $("#prefs-prefs-disable-peakmeter").prop("checked", resp.disable_peakmeter)
             $("#prefs-audio-256-frames").prop("checked", resp.jack_256_frames)
             $("#prefs-audio-mono-copy").prop("checked", resp.jack_mono_copy)
             $("#prefs-audio-sync-mode").prop("checked", resp.jack_sync_mode)
             $("#prefs-service-mixserver").prop("checked", resp.service_mixserver)
             $("#prefs-service-mod-sdk").prop("checked", resp.service_mod_sdk)
             $("#prefs-service-netmanager").prop("checked", resp.service_netmanager)
+            $("#prefs-workarounds-autorestart-hmi").prop("checked", resp.autorestart_hmi)
+            $("#prefs-workarounds-disable-peakmeter").prop("checked", resp.disable_peakmeter)
         },
         cache: false,
         global: false,
@@ -530,13 +531,6 @@ $('document').ready(function() {
     })
 
     // ----------------------------------------------------------------------------------------------------------------
-    // --- Preferences
-
-    $("#prefs-prefs-disable-peakmeter").click(function () {
-        enable_service("mod-peakmeter", $(this).prop("checked"), true)
-    })
-
-    // ----------------------------------------------------------------------------------------------------------------
     // --- Backup & Restore
 
     function show_blocker (exporting) {
@@ -655,6 +649,17 @@ $('document').ready(function() {
 
     $("#prefs-service-netmanager").click(function () {
         enable_service("netmanager", $(this).prop("checked"))
+    })
+
+    // ----------------------------------------------------------------------------------------------------------------
+    // --- Workarounds
+
+    $("#prefs-workarounds-autorestart-hmi").click(function () {
+        create_or_delete_file("autorestart-hmi", $(this).prop("checked"), true)
+    })
+
+    $("#prefs-workarounds-disable-peakmeter").click(function () {
+        enable_service("mod-peakmeter", $(this).prop("checked"), true)
     })
 
     // ----------------------------------------------------------------------------------------------------------------
@@ -848,16 +853,6 @@ $('document').ready(function() {
                     </p>
                     -->
                     <label>
-                        <input type="checkbox" autocomplete="off" id="prefs-prefs-disable-peakmeter">
-                            Disable audio peak meters
-                        </input>
-                    </label>
-                    <p>
-                        If you are experiencing issues because of the peak meters, you can disable them here.<br/>
-                        This is a temporary countermeasure against issues in a few Duo X units.
-                    </p>
-
-                    <label>
                         <input type="checkbox" autocomplete="off" id="prefs-audio-mono-copy">
                             Copy mono output buffer to unused channel
                         </input>
@@ -921,6 +916,29 @@ $('document').ready(function() {
                         Note that beta plugins can be unstable and cause crashes.
                         If you share a pedalboard containing beta plugins, it will only be available to users that explicitly accept pedalboards with beta plugins.<br/>
                         Just remember: things can break!
+                    </p>
+                </form>
+
+                <h1>Workarounds</h1>
+                <form class="form">
+                    <label>
+                        <input type="checkbox" autocomplete="off" id="prefs-workarounds-autorestart-hmi">
+                            Automatically restart controller screen
+                        </input>
+                    </label>
+                    <p>
+                        If the controller displays lock up or stop working correctly, we can try to detect this and automatically trigger a restart.<br/>
+                        This is not completely safe though, false positives can happen and the controller screen might be restarted by mistake.<br/>
+                        A reboot is required in order for this option to take place.
+                    </p>
+                    <label>
+                        <input type="checkbox" autocomplete="off" id="prefs-workarounds-disable-peakmeter">
+                            Disable audio peak meters
+                        </input>
+                    </label>
+                    <p>
+                        If you are experiencing issues because of the peak meters, you can disable them here.<br/>
+                        This is a temporary countermeasure against issues in a few Duo X units.
                     </p>
                 </form>
             </div>
