--- a/html/settings.html
+++ b/html/settings.html
@@ -927,7 +927,7 @@ $('document').ready(function() {
                         </input>
                     </label>
                     <p>
-                        If the controller displays lock up or stop working correctly, we can try to detect this and automatically trigger a restart.<br/>
+                        If the controller displays locks up or stops working correctly, we can try to detect this and automatically trigger a restart.<br/>
                         This is not completely safe though, false positives can happen and the controller screen might be restarted by mistake.<br/>
                         A reboot is required in order for this option to take place.
                     </p>
