Toggle grid/list view mode

--- a/html/index.html
+++ b/html/index.html
@@ -754,6 +754,7 @@ $('document').ready(function() {
                 <h1 class="bottom top">
                     Pedalboards Library
                 </h1>
+                <span class="view-mode">MODE</span>
                 <div class="form-group">
                     <input id="searchPedalboard" class="form-control" maxlength="20" placeholder="Filter by keyword(s)" type="search"/>
                 </div>
