[DX-482] Show cv in/outputs with range in plugin info dialog

--- a/html/index.html
+++ b/html/index.html
@@ -248,7 +248,8 @@ $('document').ready(function() {
 <script type="text/javascript" src="js/cc-manager.js?v={{version}}"></script>
 <script type="text/javascript" src="js/transport.js?v={{version}}"></script>
 <script type="text/javascript" src="js/nprogress.js?v={{version}}"></script>
-<script type="text/javascript" src="js/tempoHelper.js?v={{version}}"></script>
+<script type="text/javascript" src="js/utils/tempo.js?v={{version}}"></script>
+<script type="text/javascript" src="js/utils/plugins.js?v={{version}}"></script>
 
 </head>
 <!-- END HEAD -->
