--- a/html/settings.html
+++ b/html/settings.html
@@ -142,7 +142,7 @@ function refresh_sysinfo() {
             $("#info-kernel-release").text(INFO.uname.release)
             $("#info-kernel-version").text(INFO.uname.version)
             if (info.platform != "duox") {
-                $("#workarounds-disable-peakmeter").hide()
+                $("#prefs-service-mod-peakmeter").hide()
             }
         },
         cache: false,
@@ -170,11 +170,10 @@ function refresh_sysprefs() {
             $("#prefs-audio-256-frames").prop("checked", resp.jack_256_frames)
             $("#prefs-audio-mono-copy").prop("checked", resp.jack_mono_copy)
             $("#prefs-audio-sync-mode").prop("checked", resp.jack_sync_mode)
-            $("#prefs-service-mixserver").prop("checked", resp.service_mixserver)
+            $("#prefs-service-mod-peakmeter").prop("checked", resp.service_peakmeter)
             $("#prefs-service-mod-sdk").prop("checked", resp.service_mod_sdk)
             $("#prefs-service-netmanager").prop("checked", resp.service_netmanager)
             $("#prefs-workarounds-autorestart-hmi").prop("checked", resp.autorestart_hmi)
-            $("#prefs-workarounds-disable-peakmeter").prop("checked", resp.disable_peakmeter)
         },
         cache: false,
         global: false,
@@ -642,8 +641,8 @@ $('document').ready(function() {
     // ----------------------------------------------------------------------------------------------------------------
     // --- Services
 
-    $("#prefs-service-mixserver").click(function () {
-        enable_service("mixserver", $(this).prop("checked"))
+    $("#prefs-service-mod-peakmeter").click(function () {
+        enable_service("mod-peakmeter", $(this).prop("checked"))
     })
 
     $("#prefs-service-mod-sdk").click(function () {
@@ -659,10 +658,6 @@ $('document').ready(function() {
 
     $("#prefs-workarounds-autorestart-hmi").click(function () {
         create_or_delete_file("autorestart-hmi", $(this).prop("checked"), true)
-    })
-
-    $("#prefs-workarounds-disable-peakmeter").click(function () {
-        enable_service("mod-peakmeter", $(this).prop("checked"), true)
     })
 
     // ----------------------------------------------------------------------------------------------------------------
@@ -885,7 +880,7 @@ $('document').ready(function() {
                         Only enable services that you absolutely need.
                     </p>
                     <label>
-                        <input type="checkbox" autocomplete="off" id="prefs-service-netmanager"> JACK Net Manager (EXPERIMENTAL)</input>
+                        <input type="checkbox" autocomplete="off" id="prefs-service-mod-peakmeter"> Audio peak meters</input>
                     </label>
                     <br/>
                     <!--
@@ -895,8 +890,9 @@ $('document').ready(function() {
                     <br/>
                     -->
                     <label>
-                        <input type="checkbox" autocomplete="off" id="prefs-service-mixserver"> Remote Mix Server</input>
+                        <input type="checkbox" autocomplete="off" id="prefs-service-netmanager"> JACK Net Manager (EXPERIMENTAL)</input>
                     </label>
+                    <br/>
                 </form>
 
                 <h1>User Interface</h1>
@@ -934,17 +930,6 @@ $('document').ready(function() {
                             If the controller displays locks up or stops working correctly, we can try to detect this and automatically trigger a restart.<br/>
                             This is not completely safe though, false positives can happen and the controller screen might be restarted by mistake.<br/>
                             A reboot is required in order for this option to take place.
-                        </p>
-                    </div>
-                    <div id="workarounds-disable-peakmeter">
-                        <label>
-                            <input type="checkbox" autocomplete="off" id="prefs-workarounds-disable-peakmeter">
-                                Disable audio peak meters
-                            </input>
-                        </label>
-                        <p>
-                            If you are experiencing issues because of the peak meters, you can disable them here.<br/>
-                            This is a temporary countermeasure against issues in a few Duo X units.
                         </p>
                     </div>
                 </form>
