--- a/html/settings.html
+++ b/html/settings.html
@@ -142,7 +142,8 @@ function refresh_sysinfo() {
             $("#info-kernel-release").text(INFO.uname.release)
             $("#info-kernel-version").text(INFO.uname.version)
             if (info.platform != "duox") {
-                $("#prefs-service-mod-peakmeter").hide()
+                $("#prefs-service-mod-peakmeter-label").hide()
+                $("#prefs-service-mod-peakmeter-br").hide()
             }
         },
         cache: false,
@@ -879,10 +880,10 @@ $('document').ready(function() {
                         Note: Each additional service you enable consumes a small amount of CPU.<br/>
                         Only enable services that you absolutely need.
                     </p>
-                    <label>
+                    <label id="prefs-service-mod-peakmeter-label">
                         <input type="checkbox" autocomplete="off" id="prefs-service-mod-peakmeter"> Audio peak meters</input>
                     </label>
-                    <br/>
+                    <br id="prefs-service-mod-peakmeter-br"/>
                     <!--
                     <label>
                         <input type="checkbox" autocomplete="off" id="prefs-service-mod-sdk"> MOD SDK</input>
