--- a/html/index.html
+++ b/html/index.html
@@ -456,7 +456,7 @@ $('document').ready(function() {
             <div id="pedalboard-info">
                 <h1 class="top bottom {{titleblend}}">{{fulltitle}}</h1>
                 <div class="actions">
-                    <button class="js-cv-addressing" id="js-cv-addressing-toggle">Address CV Ports</button>
+                    <button class="js-cv-addressing" id="js-cv-addressing-toggle">Manage CV Ports</button>
                     <button class="js-preset" id="js-preset-enabler">Snapshots</button>
                     <button class="js-preset menu-trigger mod-hidden" id="js-preset-menu">Snapshots</button>
                     <ul class="drop-menu clearfix js-pedalboard-presets-menu" style="cursor:pointer;">
