[DX-444] Pass labs API env variable to mod-ui web process

--- a/html/index.html
+++ b/html/index.html
@@ -62,6 +62,7 @@
     {% autoescape None %}
     var TEMPLATES = {}
     SITEURL = '{{cloud_url}}'
+    LABS_URL = '{{labs_url}}'
     PLUGINS_URL      = '{{plugins_url}}'
     PEDALBOARDS_URL  = '{{pedalboards_url}}'
     CONTROLCHAIN_URL = '{{controlchain_url}}'
