Pass pedalboards labs url to mod-ui web process

--- a/html/index.html
+++ b/html/index.html
@@ -60,9 +60,10 @@
     {% autoescape None %}
     var TEMPLATES = {}
     SITEURL = '{{cloud_url}}'
-    LABS_URL = '{{labs_url}}'
+    CLOUD_LABS_URL = '{{cloud_labs_url}}'
     PLUGINS_URL      = '{{plugins_url}}'
     PEDALBOARDS_URL  = '{{pedalboards_url}}'
+    PEDALBOARDS_LABS_URL  = '{{pedalboards_labs_url}}'
     CONTROLCHAIN_URL = '{{controlchain_url}}'
     LV2_PLUGIN_DIR   = '{{lv2_plugin_dir}}'
     VERSION          = '{{version}}'
