--- a/html/settings.html
+++ b/html/settings.html
@@ -908,13 +908,13 @@ $('document').ready(function() {
                     </p>
                     <label>
                         <input type="checkbox" autocomplete="off" id="prefs-ui-unstable-plugins">
-                            Show beta plugins in the Store
+                            Show MOD Labs plugins in the store
                         </input>
                     </label>
                     <p>
-                        Show option to list 'beta' plugins in the Plugin Store.<br/>
-                        Note that beta plugins can be unstable and cause crashes.
-                        If you share a pedalboard containing beta plugins, it will only be available to users that explicitly accept pedalboards with beta plugins.<br/>
+                        Show option to access "MOD Labs" plugins in the Plugin Store.<br/>
+                        Please note that MOD Labs plugins are community maintained, can be unstable and can cause crashes.
+                        If you share a pedalboard containing MOD Labs plugins, it will only be available to users that explicitly accept pedalboards using MOD Labs plugins.
                         Just remember: things can break!
                     </p>
                 </form>
