--- a/html/resources/settings.html
+++ b/html/resources/settings.html
@@ -53,7 +53,7 @@
             {{#path}}
             <div class="mod-enumerated mod-file-list">
                 <span class="mod-enumerated-title">{{label}}</span>
-                <div class="mod-enumerated-list" mod-parameter-uri="{{uri}}" mod-widget="custom-select">
+                <div class="mod-enumerated-list" mod-role="input-parameter" mod-parameter-uri="{{uri}}" mod-widget="custom-parameter-select">
                     {{#files}}
                     <div mod-role="enumeration-option" mod-parameter-value="{{fullname}}">{{basename}}</div>
                     {{/files}}
