Send file changes from browser to mod-host
Signed-off-by: falkTX <falktx@falktx.com>

--- a/html/index.html
+++ b/html/index.html
@@ -837,7 +837,7 @@ $('document').ready(function() {
             <h1 class="bottom top">File Manager</h1>
         </header>
         <div id="file-manager-wrapper">
-            <iframe title="File Manager"></iframe>
+            <iframe title="File Manager" allowtransparency="true"></iframe>
         </div>
     </div></div>
     <!-- END FILE MANAGER -->
